Add MVC, Index Action and View with paginator

--- a/BikeShop.WebUi/BikeShop.WebUi.csproj
+++ b/BikeShop.WebUi/BikeShop.WebUi.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.1.2" />
+    <PackageReference Include="PagedList.Core.Mvc" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BikeShop.Domain\BikeShop.Domain.csproj" />
   </ItemGroup>
 
