--- a/BikeShop.WebUi/Properties/launchSettings.json
+++ b/BikeShop.WebUi/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:47448",
-      "sslPort": 44371
+      "applicationUrl": "http://localhost:52464",
+      "sslPort": 44378
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BikeShop.WebUi": {
+    "BikeShop.WebUI": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
