add navigation by category to HomeController  Index View

--- a/BikeShop.WebUi/BikeShop.WebUi.csproj
+++ b/BikeShop.WebUi/BikeShop.WebUi.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\BikeShop.Domain\BikeShop.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\NavCategories\" />
+  </ItemGroup>
+
 </Project>
