add images to create, edit views and ProductController

--- a/BikeShop.WebUI/BikeShop.WebUi.csproj
+++ b/BikeShop.WebUI/BikeShop.WebUi.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Views\NavCategories\" />
+    <Folder Include="wwwroot\Files\" />
   </ItemGroup>
 
 </Project>
